--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -7,7 +7,9 @@
 <META http-equiv="Content-Style-Type" content="text/css">
 	<link rel="shortcut icon" href="../images/fohp.ico">
 <LINK href="../theme/WSH.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="../css/lightbox.css">
 <TITLE>Friends of Hart Park and Museum</TITLE>
+<script type="text/javascript" src="../js/lightbox.js"></script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_preloadImages() { //v3.0
@@ -140,14 +142,18 @@ function MM_swapImage() { //v3.0
 					<HR>
 <h2 align="center">Welcome to William S. Hart Park Barnyard info page!</h2>
 
-<p align="center">
-<img align="center" src="../images/barnyardOpen2.jpg"/>
-<br>
-<p>We thank you for coming to our Grand Re-Opening of the Barnyard on August 15, 2021!  
-<p>On February 27, 2019, we were forced to close the Barnyard to the public due to the threat of a very contagious bird disease called Virulent Newcastle's Disease.  This mandatory quarantine affected all facilities that displayed birds to the public in L.A. County (and surrounding counties).  Our birds were fine and healthy &mdash; the quarantine was designed to keep them protected.  
+<div id="rightthird">
+<img src="Hours.jpeg"/>
+</div>
+<p>Bring the entire family!  Feed the animals! 
+<a href= "../Event_Pages/2022barnyardTours.png" 
+title="Barnyard Tour" rel="lightbox[barnyardTour]">
+Click here to learn out to arrange to get a FREE Barnyard Tour!
+</a>
+<p>We've come a long way since February 27, 2019, when we were forced to close the Barnyard to the public due to the threat of a very contagious bird disease called Virulent Newcastle's Disease.  This mandatory quarantine affected all facilities that displayed birds to the public in L.A. County (and surrounding counties).  Our birds were fine and healthy &mdash; the quarantine was designed to keep them protected.  
 <p>From that quarantine, we rolled right into a Barnyard closure because of Covid-19 and the inability to socially distance groups of people in the aisle ways of the Barnyard.  
 <p>And, finally, we had a rabbit quarantine that affected us as of March 2021, which will ended in late July 2021.  RHD (Rabbit Hemorrhagic Disease) is a very serious illness that only affects rabbits and hares (in both captivity and the wild).  
-<p>So&#8230; after 2&#189; years of our Barnyard being closed to the public, we were VERY EXCITED to announce the Grand Re-Opening on August 15, 2021!!  
+<p>So&#8230; after 2&#189; years of our Barnyard being closed to the public, we were VERY EXCITED to be open again, and look forward to your visit!
 <p>When you visit, don't forget to visit our bison herd, which are located in the 22+ acre enclosure to the west of the Barnyard (just off La Loma Road).  
 <p>The Barnyard will be open from 9am until 2pm, on all days the park is open (Note:  Park is closed Mondays).  
 <p><i>Hours/Availability to visit Barnyard are subject to change without notice, due to unforeseen circumstances.</i>
@@ -155,7 +161,7 @@ function MM_swapImage() { //v3.0
 </p>
                     <!--
 					<p class="cowboyfest" align="center">
-                    <em>Barnyard now partially open 9am-2pm every day!</em>
+                    <em>Barnyard now partially open 9am-2pm every day!</em
                     <p class="cowboyfest" align="center">
                     Only the chicken area is still off limits due to the dangers of our 
                     healthy chickens contracting Newcastle disease.
